cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir35435 SHARED ${SRC_FILES} )
add_subdirectory(dir35436)
add_subdirectory(dir35536)
add_subdirectory(dir38969)
add_subdirectory(dir40616)
set_source_files_properties(file40618.cpp PROPERTIES COMPILE_FLAGS -Dfile40618)

set_source_files_properties(file40619.cpp PROPERTIES COMPILE_FLAGS -Dfile40619)

set_source_files_properties(file40620.cpp PROPERTIES COMPILE_FLAGS -Dfile40620)

set_source_files_properties(file40621.cpp PROPERTIES COMPILE_FLAGS -Dfile40621)

set_source_files_properties(file40622.cpp PROPERTIES COMPILE_FLAGS -Dfile40622)

set_source_files_properties(file40623.cpp PROPERTIES COMPILE_FLAGS -Dfile40623)

set_source_files_properties(file40624.cpp PROPERTIES COMPILE_FLAGS -Dfile40624)

set_source_files_properties(file40625.cpp PROPERTIES COMPILE_FLAGS -Dfile40625)

set_source_files_properties(file40626.cpp PROPERTIES COMPILE_FLAGS -Dfile40626)

set_source_files_properties(file40627.cpp PROPERTIES COMPILE_FLAGS -Dfile40627)

set_source_files_properties(file40628.cpp PROPERTIES COMPILE_FLAGS -Dfile40628)

set_source_files_properties(file40629.cpp PROPERTIES COMPILE_FLAGS -Dfile40629)

set_source_files_properties(file40630.cpp PROPERTIES COMPILE_FLAGS -Dfile40630)

set_source_files_properties(file40631.cpp PROPERTIES COMPILE_FLAGS -Dfile40631)

set_source_files_properties(file40632.cpp PROPERTIES COMPILE_FLAGS -Dfile40632)

set_source_files_properties(file40633.cpp PROPERTIES COMPILE_FLAGS -Dfile40633)

set_source_files_properties(file40634.cpp PROPERTIES COMPILE_FLAGS -Dfile40634)

set_source_files_properties(file40635.cpp PROPERTIES COMPILE_FLAGS -Dfile40635)

set_source_files_properties(file40636.cpp PROPERTIES COMPILE_FLAGS -Dfile40636)

set_source_files_properties(file40637.cpp PROPERTIES COMPILE_FLAGS -Dfile40637)

set_source_files_properties(file40638.cpp PROPERTIES COMPILE_FLAGS -Dfile40638)

set_source_files_properties(file40639.cpp PROPERTIES COMPILE_FLAGS -Dfile40639)

set_source_files_properties(file40640.cpp PROPERTIES COMPILE_FLAGS -Dfile40640)

set_source_files_properties(file40641.cpp PROPERTIES COMPILE_FLAGS -Dfile40641)

set_source_files_properties(file40642.cpp PROPERTIES COMPILE_FLAGS -Dfile40642)

set_source_files_properties(file40643.cpp PROPERTIES COMPILE_FLAGS -Dfile40643)

set_source_files_properties(file40644.cpp PROPERTIES COMPILE_FLAGS -Dfile40644)

set_source_files_properties(file40645.cpp PROPERTIES COMPILE_FLAGS -Dfile40645)

set_source_files_properties(file40646.cpp PROPERTIES COMPILE_FLAGS -Dfile40646)

set_source_files_properties(file40647.cpp PROPERTIES COMPILE_FLAGS -Dfile40647)

set_source_files_properties(file40648.cpp PROPERTIES COMPILE_FLAGS -Dfile40648)

set_source_files_properties(file40649.cpp PROPERTIES COMPILE_FLAGS -Dfile40649)

set_source_files_properties(file40650.cpp PROPERTIES COMPILE_FLAGS -Dfile40650)

set_source_files_properties(file40651.cpp PROPERTIES COMPILE_FLAGS -Dfile40651)

set_source_files_properties(file40652.cpp PROPERTIES COMPILE_FLAGS -Dfile40652)

set_source_files_properties(file40653.cpp PROPERTIES COMPILE_FLAGS -Dfile40653)

set_source_files_properties(file40654.cpp PROPERTIES COMPILE_FLAGS -Dfile40654)

set_source_files_properties(file40655.cpp PROPERTIES COMPILE_FLAGS -Dfile40655)

set_source_files_properties(file40656.cpp PROPERTIES COMPILE_FLAGS -Dfile40656)

set_source_files_properties(file40657.cpp PROPERTIES COMPILE_FLAGS -Dfile40657)

set_source_files_properties(file40658.cpp PROPERTIES COMPILE_FLAGS -Dfile40658)

set_source_files_properties(file40659.cpp PROPERTIES COMPILE_FLAGS -Dfile40659)

set_source_files_properties(file40660.cpp PROPERTIES COMPILE_FLAGS -Dfile40660)

set_source_files_properties(file40661.cpp PROPERTIES COMPILE_FLAGS -Dfile40661)

set_source_files_properties(file40662.cpp PROPERTIES COMPILE_FLAGS -Dfile40662)

set_source_files_properties(file40663.cpp PROPERTIES COMPILE_FLAGS -Dfile40663)

set_source_files_properties(file40664.cpp PROPERTIES COMPILE_FLAGS -Dfile40664)

set_source_files_properties(file40665.cpp PROPERTIES COMPILE_FLAGS -Dfile40665)

set_source_files_properties(file40666.cpp PROPERTIES COMPILE_FLAGS -Dfile40666)

set_source_files_properties(file40667.cpp PROPERTIES COMPILE_FLAGS -Dfile40667)

set_source_files_properties(file40668.cpp PROPERTIES COMPILE_FLAGS -Dfile40668)

set_source_files_properties(file40669.cpp PROPERTIES COMPILE_FLAGS -Dfile40669)

set_source_files_properties(file40670.cpp PROPERTIES COMPILE_FLAGS -Dfile40670)

set_source_files_properties(file40671.cpp PROPERTIES COMPILE_FLAGS -Dfile40671)

set_source_files_properties(file40672.cpp PROPERTIES COMPILE_FLAGS -Dfile40672)

set_source_files_properties(file40673.cpp PROPERTIES COMPILE_FLAGS -Dfile40673)

set_source_files_properties(file40674.cpp PROPERTIES COMPILE_FLAGS -Dfile40674)

set_source_files_properties(file40675.cpp PROPERTIES COMPILE_FLAGS -Dfile40675)

set_source_files_properties(file40676.cpp PROPERTIES COMPILE_FLAGS -Dfile40676)

set_source_files_properties(file40677.cpp PROPERTIES COMPILE_FLAGS -Dfile40677)

set_source_files_properties(file40678.cpp PROPERTIES COMPILE_FLAGS -Dfile40678)

set_source_files_properties(file40679.cpp PROPERTIES COMPILE_FLAGS -Dfile40679)

set_source_files_properties(file40680.cpp PROPERTIES COMPILE_FLAGS -Dfile40680)

set_source_files_properties(file40681.cpp PROPERTIES COMPILE_FLAGS -Dfile40681)

set_source_files_properties(file40682.cpp PROPERTIES COMPILE_FLAGS -Dfile40682)

set_source_files_properties(file40683.cpp PROPERTIES COMPILE_FLAGS -Dfile40683)

set_source_files_properties(file40684.cpp PROPERTIES COMPILE_FLAGS -Dfile40684)

set_source_files_properties(file40685.cpp PROPERTIES COMPILE_FLAGS -Dfile40685)

set_source_files_properties(file40686.cpp PROPERTIES COMPILE_FLAGS -Dfile40686)

set_source_files_properties(file40687.cpp PROPERTIES COMPILE_FLAGS -Dfile40687)

set_source_files_properties(file40688.cpp PROPERTIES COMPILE_FLAGS -Dfile40688)

set_source_files_properties(file40689.cpp PROPERTIES COMPILE_FLAGS -Dfile40689)

set_source_files_properties(file40690.cpp PROPERTIES COMPILE_FLAGS -Dfile40690)

set_source_files_properties(file40691.cpp PROPERTIES COMPILE_FLAGS -Dfile40691)

set_source_files_properties(file40692.cpp PROPERTIES COMPILE_FLAGS -Dfile40692)

set_source_files_properties(file40693.cpp PROPERTIES COMPILE_FLAGS -Dfile40693)

set_source_files_properties(file40694.cpp PROPERTIES COMPILE_FLAGS -Dfile40694)

set_source_files_properties(file40695.cpp PROPERTIES COMPILE_FLAGS -Dfile40695)

set_source_files_properties(file40696.cpp PROPERTIES COMPILE_FLAGS -Dfile40696)

set_source_files_properties(file40697.cpp PROPERTIES COMPILE_FLAGS -Dfile40697)

set_source_files_properties(file40698.cpp PROPERTIES COMPILE_FLAGS -Dfile40698)

set_source_files_properties(file40699.cpp PROPERTIES COMPILE_FLAGS -Dfile40699)

set_source_files_properties(file40700.cpp PROPERTIES COMPILE_FLAGS -Dfile40700)

set_source_files_properties(file40701.cpp PROPERTIES COMPILE_FLAGS -Dfile40701)

set_source_files_properties(file40702.cpp PROPERTIES COMPILE_FLAGS -Dfile40702)

set_source_files_properties(file40703.cpp PROPERTIES COMPILE_FLAGS -Dfile40703)

set_source_files_properties(file40704.cpp PROPERTIES COMPILE_FLAGS -Dfile40704)

set_source_files_properties(file40705.cpp PROPERTIES COMPILE_FLAGS -Dfile40705)

set_source_files_properties(file40706.cpp PROPERTIES COMPILE_FLAGS -Dfile40706)

set_source_files_properties(file40707.cpp PROPERTIES COMPILE_FLAGS -Dfile40707)

set_source_files_properties(file40708.cpp PROPERTIES COMPILE_FLAGS -Dfile40708)

set_source_files_properties(file40709.cpp PROPERTIES COMPILE_FLAGS -Dfile40709)

set_source_files_properties(file40710.cpp PROPERTIES COMPILE_FLAGS -Dfile40710)

set_source_files_properties(file40711.cpp PROPERTIES COMPILE_FLAGS -Dfile40711)

set_source_files_properties(file40712.cpp PROPERTIES COMPILE_FLAGS -Dfile40712)

set_source_files_properties(file40713.cpp PROPERTIES COMPILE_FLAGS -Dfile40713)

set_source_files_properties(file40714.cpp PROPERTIES COMPILE_FLAGS -Dfile40714)

set_source_files_properties(file40715.cpp PROPERTIES COMPILE_FLAGS -Dfile40715)

set_source_files_properties(file40716.cpp PROPERTIES COMPILE_FLAGS -Dfile40716)

set_source_files_properties(file40717.cpp PROPERTIES COMPILE_FLAGS -Dfile40717)

set_source_files_properties(file40718.cpp PROPERTIES COMPILE_FLAGS -Dfile40718)

set_source_files_properties(file40719.cpp PROPERTIES COMPILE_FLAGS -Dfile40719)

set_source_files_properties(file40720.cpp PROPERTIES COMPILE_FLAGS -Dfile40720)

set_source_files_properties(file40721.cpp PROPERTIES COMPILE_FLAGS -Dfile40721)

set_source_files_properties(file40722.cpp PROPERTIES COMPILE_FLAGS -Dfile40722)

set_source_files_properties(file40723.cpp PROPERTIES COMPILE_FLAGS -Dfile40723)

set_source_files_properties(file40724.cpp PROPERTIES COMPILE_FLAGS -Dfile40724)

set_source_files_properties(file40725.cpp PROPERTIES COMPILE_FLAGS -Dfile40725)

set_source_files_properties(file40726.cpp PROPERTIES COMPILE_FLAGS -Dfile40726)

set_source_files_properties(file40727.cpp PROPERTIES COMPILE_FLAGS -Dfile40727)

set_source_files_properties(file40728.cpp PROPERTIES COMPILE_FLAGS -Dfile40728)

set_source_files_properties(file40729.cpp PROPERTIES COMPILE_FLAGS -Dfile40729)

set_source_files_properties(file40730.cpp PROPERTIES COMPILE_FLAGS -Dfile40730)

set_source_files_properties(file40731.cpp PROPERTIES COMPILE_FLAGS -Dfile40731)

set_source_files_properties(file40732.cpp PROPERTIES COMPILE_FLAGS -Dfile40732)

set_source_files_properties(file40733.cpp PROPERTIES COMPILE_FLAGS -Dfile40733)

set_source_files_properties(file40734.cpp PROPERTIES COMPILE_FLAGS -Dfile40734)
