cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir385 SHARED ${SRC_FILES} )
set_source_files_properties(file386.cpp PROPERTIES COMPILE_FLAGS -Dfile386)

set_source_files_properties(file387.cpp PROPERTIES COMPILE_FLAGS -Dfile387)

set_source_files_properties(file388.cpp PROPERTIES COMPILE_FLAGS -Dfile388)

set_source_files_properties(file389.cpp PROPERTIES COMPILE_FLAGS -Dfile389)

set_source_files_properties(file390.cpp PROPERTIES COMPILE_FLAGS -Dfile390)

set_source_files_properties(file391.cpp PROPERTIES COMPILE_FLAGS -Dfile391)

set_source_files_properties(file392.cpp PROPERTIES COMPILE_FLAGS -Dfile392)

set_source_files_properties(file393.cpp PROPERTIES COMPILE_FLAGS -Dfile393)

set_source_files_properties(file394.cpp PROPERTIES COMPILE_FLAGS -Dfile394)

set_source_files_properties(file395.cpp PROPERTIES COMPILE_FLAGS -Dfile395)

set_source_files_properties(file396.cpp PROPERTIES COMPILE_FLAGS -Dfile396)

set_source_files_properties(file397.cpp PROPERTIES COMPILE_FLAGS -Dfile397)

set_source_files_properties(file398.cpp PROPERTIES COMPILE_FLAGS -Dfile398)

set_source_files_properties(file399.cpp PROPERTIES COMPILE_FLAGS -Dfile399)

set_source_files_properties(file400.cpp PROPERTIES COMPILE_FLAGS -Dfile400)

set_source_files_properties(file401.cpp PROPERTIES COMPILE_FLAGS -Dfile401)

set_source_files_properties(file402.cpp PROPERTIES COMPILE_FLAGS -Dfile402)

set_source_files_properties(file403.cpp PROPERTIES COMPILE_FLAGS -Dfile403)

set_source_files_properties(file404.cpp PROPERTIES COMPILE_FLAGS -Dfile404)
