cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir405 SHARED ${SRC_FILES} )
set_source_files_properties(file406.cpp PROPERTIES COMPILE_FLAGS -Dfile406)

set_source_files_properties(file407.cpp PROPERTIES COMPILE_FLAGS -Dfile407)

set_source_files_properties(file408.cpp PROPERTIES COMPILE_FLAGS -Dfile408)

set_source_files_properties(file409.cpp PROPERTIES COMPILE_FLAGS -Dfile409)

set_source_files_properties(file410.cpp PROPERTIES COMPILE_FLAGS -Dfile410)

set_source_files_properties(file411.cpp PROPERTIES COMPILE_FLAGS -Dfile411)

set_source_files_properties(file412.cpp PROPERTIES COMPILE_FLAGS -Dfile412)

set_source_files_properties(file413.cpp PROPERTIES COMPILE_FLAGS -Dfile413)

set_source_files_properties(file414.cpp PROPERTIES COMPILE_FLAGS -Dfile414)

set_source_files_properties(file415.cpp PROPERTIES COMPILE_FLAGS -Dfile415)

set_source_files_properties(file416.cpp PROPERTIES COMPILE_FLAGS -Dfile416)

set_source_files_properties(file417.cpp PROPERTIES COMPILE_FLAGS -Dfile417)

set_source_files_properties(file418.cpp PROPERTIES COMPILE_FLAGS -Dfile418)

set_source_files_properties(file419.cpp PROPERTIES COMPILE_FLAGS -Dfile419)

set_source_files_properties(file420.cpp PROPERTIES COMPILE_FLAGS -Dfile420)

set_source_files_properties(file421.cpp PROPERTIES COMPILE_FLAGS -Dfile421)

set_source_files_properties(file422.cpp PROPERTIES COMPILE_FLAGS -Dfile422)

set_source_files_properties(file423.cpp PROPERTIES COMPILE_FLAGS -Dfile423)

set_source_files_properties(file424.cpp PROPERTIES COMPILE_FLAGS -Dfile424)

set_source_files_properties(file425.cpp PROPERTIES COMPILE_FLAGS -Dfile425)

set_source_files_properties(file426.cpp PROPERTIES COMPILE_FLAGS -Dfile426)

set_source_files_properties(file427.cpp PROPERTIES COMPILE_FLAGS -Dfile427)

set_source_files_properties(file428.cpp PROPERTIES COMPILE_FLAGS -Dfile428)

set_source_files_properties(file429.cpp PROPERTIES COMPILE_FLAGS -Dfile429)

set_source_files_properties(file430.cpp PROPERTIES COMPILE_FLAGS -Dfile430)

set_source_files_properties(file431.cpp PROPERTIES COMPILE_FLAGS -Dfile431)

set_source_files_properties(file432.cpp PROPERTIES COMPILE_FLAGS -Dfile432)

set_source_files_properties(file433.cpp PROPERTIES COMPILE_FLAGS -Dfile433)

set_source_files_properties(file434.cpp PROPERTIES COMPILE_FLAGS -Dfile434)

set_source_files_properties(file435.cpp PROPERTIES COMPILE_FLAGS -Dfile435)

set_source_files_properties(file436.cpp PROPERTIES COMPILE_FLAGS -Dfile436)

set_source_files_properties(file437.cpp PROPERTIES COMPILE_FLAGS -Dfile437)

set_source_files_properties(file438.cpp PROPERTIES COMPILE_FLAGS -Dfile438)

set_source_files_properties(file439.cpp PROPERTIES COMPILE_FLAGS -Dfile439)

set_source_files_properties(file440.cpp PROPERTIES COMPILE_FLAGS -Dfile440)

set_source_files_properties(file441.cpp PROPERTIES COMPILE_FLAGS -Dfile441)

set_source_files_properties(file442.cpp PROPERTIES COMPILE_FLAGS -Dfile442)

set_source_files_properties(file443.cpp PROPERTIES COMPILE_FLAGS -Dfile443)

set_source_files_properties(file444.cpp PROPERTIES COMPILE_FLAGS -Dfile444)

set_source_files_properties(file445.cpp PROPERTIES COMPILE_FLAGS -Dfile445)

set_source_files_properties(file446.cpp PROPERTIES COMPILE_FLAGS -Dfile446)

set_source_files_properties(file447.cpp PROPERTIES COMPILE_FLAGS -Dfile447)

set_source_files_properties(file448.cpp PROPERTIES COMPILE_FLAGS -Dfile448)

set_source_files_properties(file449.cpp PROPERTIES COMPILE_FLAGS -Dfile449)

set_source_files_properties(file450.cpp PROPERTIES COMPILE_FLAGS -Dfile450)

set_source_files_properties(file451.cpp PROPERTIES COMPILE_FLAGS -Dfile451)

set_source_files_properties(file452.cpp PROPERTIES COMPILE_FLAGS -Dfile452)

set_source_files_properties(file453.cpp PROPERTIES COMPILE_FLAGS -Dfile453)

set_source_files_properties(file454.cpp PROPERTIES COMPILE_FLAGS -Dfile454)

set_source_files_properties(file455.cpp PROPERTIES COMPILE_FLAGS -Dfile455)

set_source_files_properties(file456.cpp PROPERTIES COMPILE_FLAGS -Dfile456)

set_source_files_properties(file457.cpp PROPERTIES COMPILE_FLAGS -Dfile457)

set_source_files_properties(file458.cpp PROPERTIES COMPILE_FLAGS -Dfile458)

set_source_files_properties(file459.cpp PROPERTIES COMPILE_FLAGS -Dfile459)

set_source_files_properties(file460.cpp PROPERTIES COMPILE_FLAGS -Dfile460)

set_source_files_properties(file461.cpp PROPERTIES COMPILE_FLAGS -Dfile461)

set_source_files_properties(file462.cpp PROPERTIES COMPILE_FLAGS -Dfile462)

set_source_files_properties(file463.cpp PROPERTIES COMPILE_FLAGS -Dfile463)

set_source_files_properties(file464.cpp PROPERTIES COMPILE_FLAGS -Dfile464)

set_source_files_properties(file465.cpp PROPERTIES COMPILE_FLAGS -Dfile465)

set_source_files_properties(file466.cpp PROPERTIES COMPILE_FLAGS -Dfile466)

set_source_files_properties(file467.cpp PROPERTIES COMPILE_FLAGS -Dfile467)

set_source_files_properties(file468.cpp PROPERTIES COMPILE_FLAGS -Dfile468)

set_source_files_properties(file469.cpp PROPERTIES COMPILE_FLAGS -Dfile469)

set_source_files_properties(file470.cpp PROPERTIES COMPILE_FLAGS -Dfile470)

set_source_files_properties(file471.cpp PROPERTIES COMPILE_FLAGS -Dfile471)

set_source_files_properties(file472.cpp PROPERTIES COMPILE_FLAGS -Dfile472)

set_source_files_properties(file473.cpp PROPERTIES COMPILE_FLAGS -Dfile473)

set_source_files_properties(file474.cpp PROPERTIES COMPILE_FLAGS -Dfile474)

set_source_files_properties(file475.cpp PROPERTIES COMPILE_FLAGS -Dfile475)

set_source_files_properties(file476.cpp PROPERTIES COMPILE_FLAGS -Dfile476)

set_source_files_properties(file477.cpp PROPERTIES COMPILE_FLAGS -Dfile477)

set_source_files_properties(file478.cpp PROPERTIES COMPILE_FLAGS -Dfile478)

set_source_files_properties(file479.cpp PROPERTIES COMPILE_FLAGS -Dfile479)

set_source_files_properties(file480.cpp PROPERTIES COMPILE_FLAGS -Dfile480)

set_source_files_properties(file481.cpp PROPERTIES COMPILE_FLAGS -Dfile481)

set_source_files_properties(file482.cpp PROPERTIES COMPILE_FLAGS -Dfile482)

set_source_files_properties(file483.cpp PROPERTIES COMPILE_FLAGS -Dfile483)

set_source_files_properties(file484.cpp PROPERTIES COMPILE_FLAGS -Dfile484)

set_source_files_properties(file485.cpp PROPERTIES COMPILE_FLAGS -Dfile485)

set_source_files_properties(file486.cpp PROPERTIES COMPILE_FLAGS -Dfile486)

set_source_files_properties(file487.cpp PROPERTIES COMPILE_FLAGS -Dfile487)

set_source_files_properties(file488.cpp PROPERTIES COMPILE_FLAGS -Dfile488)

set_source_files_properties(file489.cpp PROPERTIES COMPILE_FLAGS -Dfile489)

set_source_files_properties(file490.cpp PROPERTIES COMPILE_FLAGS -Dfile490)

set_source_files_properties(file491.cpp PROPERTIES COMPILE_FLAGS -Dfile491)

set_source_files_properties(file492.cpp PROPERTIES COMPILE_FLAGS -Dfile492)

set_source_files_properties(file493.cpp PROPERTIES COMPILE_FLAGS -Dfile493)

set_source_files_properties(file494.cpp PROPERTIES COMPILE_FLAGS -Dfile494)

set_source_files_properties(file495.cpp PROPERTIES COMPILE_FLAGS -Dfile495)

set_source_files_properties(file496.cpp PROPERTIES COMPILE_FLAGS -Dfile496)

set_source_files_properties(file497.cpp PROPERTIES COMPILE_FLAGS -Dfile497)

set_source_files_properties(file498.cpp PROPERTIES COMPILE_FLAGS -Dfile498)

set_source_files_properties(file499.cpp PROPERTIES COMPILE_FLAGS -Dfile499)

set_source_files_properties(file500.cpp PROPERTIES COMPILE_FLAGS -Dfile500)

set_source_files_properties(file501.cpp PROPERTIES COMPILE_FLAGS -Dfile501)

set_source_files_properties(file502.cpp PROPERTIES COMPILE_FLAGS -Dfile502)

set_source_files_properties(file503.cpp PROPERTIES COMPILE_FLAGS -Dfile503)

set_source_files_properties(file504.cpp PROPERTIES COMPILE_FLAGS -Dfile504)

set_source_files_properties(file505.cpp PROPERTIES COMPILE_FLAGS -Dfile505)

set_source_files_properties(file506.cpp PROPERTIES COMPILE_FLAGS -Dfile506)

set_source_files_properties(file507.cpp PROPERTIES COMPILE_FLAGS -Dfile507)

set_source_files_properties(file508.cpp PROPERTIES COMPILE_FLAGS -Dfile508)

set_source_files_properties(file509.cpp PROPERTIES COMPILE_FLAGS -Dfile509)

set_source_files_properties(file510.cpp PROPERTIES COMPILE_FLAGS -Dfile510)

set_source_files_properties(file511.cpp PROPERTIES COMPILE_FLAGS -Dfile511)

set_source_files_properties(file512.cpp PROPERTIES COMPILE_FLAGS -Dfile512)

set_source_files_properties(file513.cpp PROPERTIES COMPILE_FLAGS -Dfile513)

set_source_files_properties(file514.cpp PROPERTIES COMPILE_FLAGS -Dfile514)

set_source_files_properties(file515.cpp PROPERTIES COMPILE_FLAGS -Dfile515)

set_source_files_properties(file516.cpp PROPERTIES COMPILE_FLAGS -Dfile516)

set_source_files_properties(file517.cpp PROPERTIES COMPILE_FLAGS -Dfile517)

set_source_files_properties(file518.cpp PROPERTIES COMPILE_FLAGS -Dfile518)

set_source_files_properties(file519.cpp PROPERTIES COMPILE_FLAGS -Dfile519)

set_source_files_properties(file520.cpp PROPERTIES COMPILE_FLAGS -Dfile520)
