cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir40735 SHARED ${SRC_FILES} )
add_subdirectory(dir40736)
add_subdirectory(dir40892)
set_source_files_properties(file41015.cpp PROPERTIES COMPILE_FLAGS -Dfile41015)

set_source_files_properties(file41016.cpp PROPERTIES COMPILE_FLAGS -Dfile41016)

set_source_files_properties(file41017.cpp PROPERTIES COMPILE_FLAGS -Dfile41017)

set_source_files_properties(file41018.cpp PROPERTIES COMPILE_FLAGS -Dfile41018)

set_source_files_properties(file41019.cpp PROPERTIES COMPILE_FLAGS -Dfile41019)

set_source_files_properties(file41020.cpp PROPERTIES COMPILE_FLAGS -Dfile41020)

set_source_files_properties(file41021.cpp PROPERTIES COMPILE_FLAGS -Dfile41021)

set_source_files_properties(file41022.cpp PROPERTIES COMPILE_FLAGS -Dfile41022)

set_source_files_properties(file41023.cpp PROPERTIES COMPILE_FLAGS -Dfile41023)

set_source_files_properties(file41024.cpp PROPERTIES COMPILE_FLAGS -Dfile41024)

set_source_files_properties(file41025.cpp PROPERTIES COMPILE_FLAGS -Dfile41025)

set_source_files_properties(file41026.cpp PROPERTIES COMPILE_FLAGS -Dfile41026)

set_source_files_properties(file41027.cpp PROPERTIES COMPILE_FLAGS -Dfile41027)

set_source_files_properties(file41028.cpp PROPERTIES COMPILE_FLAGS -Dfile41028)

set_source_files_properties(file41029.cpp PROPERTIES COMPILE_FLAGS -Dfile41029)

set_source_files_properties(file41030.cpp PROPERTIES COMPILE_FLAGS -Dfile41030)

set_source_files_properties(file41031.cpp PROPERTIES COMPILE_FLAGS -Dfile41031)

set_source_files_properties(file41032.cpp PROPERTIES COMPILE_FLAGS -Dfile41032)

set_source_files_properties(file41033.cpp PROPERTIES COMPILE_FLAGS -Dfile41033)

set_source_files_properties(file41034.cpp PROPERTIES COMPILE_FLAGS -Dfile41034)

set_source_files_properties(file41035.cpp PROPERTIES COMPILE_FLAGS -Dfile41035)

set_source_files_properties(file41036.cpp PROPERTIES COMPILE_FLAGS -Dfile41036)

set_source_files_properties(file41037.cpp PROPERTIES COMPILE_FLAGS -Dfile41037)

set_source_files_properties(file41038.cpp PROPERTIES COMPILE_FLAGS -Dfile41038)

set_source_files_properties(file41039.cpp PROPERTIES COMPILE_FLAGS -Dfile41039)

set_source_files_properties(file41040.cpp PROPERTIES COMPILE_FLAGS -Dfile41040)

set_source_files_properties(file41041.cpp PROPERTIES COMPILE_FLAGS -Dfile41041)

set_source_files_properties(file41042.cpp PROPERTIES COMPILE_FLAGS -Dfile41042)

set_source_files_properties(file41043.cpp PROPERTIES COMPILE_FLAGS -Dfile41043)

set_source_files_properties(file41044.cpp PROPERTIES COMPILE_FLAGS -Dfile41044)

set_source_files_properties(file41045.cpp PROPERTIES COMPILE_FLAGS -Dfile41045)

set_source_files_properties(file41046.cpp PROPERTIES COMPILE_FLAGS -Dfile41046)

set_source_files_properties(file41047.cpp PROPERTIES COMPILE_FLAGS -Dfile41047)

set_source_files_properties(file41048.cpp PROPERTIES COMPILE_FLAGS -Dfile41048)

set_source_files_properties(file41049.cpp PROPERTIES COMPILE_FLAGS -Dfile41049)

set_source_files_properties(file41050.cpp PROPERTIES COMPILE_FLAGS -Dfile41050)

set_source_files_properties(file41051.cpp PROPERTIES COMPILE_FLAGS -Dfile41051)

set_source_files_properties(file41052.cpp PROPERTIES COMPILE_FLAGS -Dfile41052)

set_source_files_properties(file41053.cpp PROPERTIES COMPILE_FLAGS -Dfile41053)

set_source_files_properties(file41054.cpp PROPERTIES COMPILE_FLAGS -Dfile41054)

set_source_files_properties(file41055.cpp PROPERTIES COMPILE_FLAGS -Dfile41055)

set_source_files_properties(file41056.cpp PROPERTIES COMPILE_FLAGS -Dfile41056)

set_source_files_properties(file41057.cpp PROPERTIES COMPILE_FLAGS -Dfile41057)

set_source_files_properties(file41058.cpp PROPERTIES COMPILE_FLAGS -Dfile41058)

set_source_files_properties(file41059.cpp PROPERTIES COMPILE_FLAGS -Dfile41059)

set_source_files_properties(file41060.cpp PROPERTIES COMPILE_FLAGS -Dfile41060)

set_source_files_properties(file41061.cpp PROPERTIES COMPILE_FLAGS -Dfile41061)

set_source_files_properties(file41062.cpp PROPERTIES COMPILE_FLAGS -Dfile41062)

set_source_files_properties(file41063.cpp PROPERTIES COMPILE_FLAGS -Dfile41063)

set_source_files_properties(file41064.cpp PROPERTIES COMPILE_FLAGS -Dfile41064)

set_source_files_properties(file41065.cpp PROPERTIES COMPILE_FLAGS -Dfile41065)

set_source_files_properties(file41066.cpp PROPERTIES COMPILE_FLAGS -Dfile41066)

set_source_files_properties(file41067.cpp PROPERTIES COMPILE_FLAGS -Dfile41067)

set_source_files_properties(file41068.cpp PROPERTIES COMPILE_FLAGS -Dfile41068)

set_source_files_properties(file41069.cpp PROPERTIES COMPILE_FLAGS -Dfile41069)

set_source_files_properties(file41070.cpp PROPERTIES COMPILE_FLAGS -Dfile41070)

set_source_files_properties(file41071.cpp PROPERTIES COMPILE_FLAGS -Dfile41071)

set_source_files_properties(file41072.cpp PROPERTIES COMPILE_FLAGS -Dfile41072)

set_source_files_properties(file41073.cpp PROPERTIES COMPILE_FLAGS -Dfile41073)

set_source_files_properties(file41074.cpp PROPERTIES COMPILE_FLAGS -Dfile41074)

set_source_files_properties(file41075.cpp PROPERTIES COMPILE_FLAGS -Dfile41075)

set_source_files_properties(file41076.cpp PROPERTIES COMPILE_FLAGS -Dfile41076)

set_source_files_properties(file41077.cpp PROPERTIES COMPILE_FLAGS -Dfile41077)

set_source_files_properties(file41078.cpp PROPERTIES COMPILE_FLAGS -Dfile41078)

set_source_files_properties(file41079.cpp PROPERTIES COMPILE_FLAGS -Dfile41079)

set_source_files_properties(file41080.cpp PROPERTIES COMPILE_FLAGS -Dfile41080)

set_source_files_properties(file41081.cpp PROPERTIES COMPILE_FLAGS -Dfile41081)

set_source_files_properties(file41082.cpp PROPERTIES COMPILE_FLAGS -Dfile41082)

set_source_files_properties(file41083.cpp PROPERTIES COMPILE_FLAGS -Dfile41083)

set_source_files_properties(file41084.cpp PROPERTIES COMPILE_FLAGS -Dfile41084)

set_source_files_properties(file41085.cpp PROPERTIES COMPILE_FLAGS -Dfile41085)

set_source_files_properties(file41086.cpp PROPERTIES COMPILE_FLAGS -Dfile41086)

set_source_files_properties(file41087.cpp PROPERTIES COMPILE_FLAGS -Dfile41087)

set_source_files_properties(file41088.cpp PROPERTIES COMPILE_FLAGS -Dfile41088)

set_source_files_properties(file41089.cpp PROPERTIES COMPILE_FLAGS -Dfile41089)

set_source_files_properties(file41090.cpp PROPERTIES COMPILE_FLAGS -Dfile41090)

set_source_files_properties(file41091.cpp PROPERTIES COMPILE_FLAGS -Dfile41091)

set_source_files_properties(file41092.cpp PROPERTIES COMPILE_FLAGS -Dfile41092)

set_source_files_properties(file41093.cpp PROPERTIES COMPILE_FLAGS -Dfile41093)

set_source_files_properties(file41094.cpp PROPERTIES COMPILE_FLAGS -Dfile41094)

set_source_files_properties(file41095.cpp PROPERTIES COMPILE_FLAGS -Dfile41095)

set_source_files_properties(file41096.cpp PROPERTIES COMPILE_FLAGS -Dfile41096)

set_source_files_properties(file41097.cpp PROPERTIES COMPILE_FLAGS -Dfile41097)

set_source_files_properties(file41098.cpp PROPERTIES COMPILE_FLAGS -Dfile41098)

set_source_files_properties(file41099.cpp PROPERTIES COMPILE_FLAGS -Dfile41099)

set_source_files_properties(file41100.cpp PROPERTIES COMPILE_FLAGS -Dfile41100)

set_source_files_properties(file41101.cpp PROPERTIES COMPILE_FLAGS -Dfile41101)

set_source_files_properties(file41102.cpp PROPERTIES COMPILE_FLAGS -Dfile41102)

set_source_files_properties(file41103.cpp PROPERTIES COMPILE_FLAGS -Dfile41103)

set_source_files_properties(file41104.cpp PROPERTIES COMPILE_FLAGS -Dfile41104)

set_source_files_properties(file41105.cpp PROPERTIES COMPILE_FLAGS -Dfile41105)

set_source_files_properties(file41106.cpp PROPERTIES COMPILE_FLAGS -Dfile41106)

set_source_files_properties(file41107.cpp PROPERTIES COMPILE_FLAGS -Dfile41107)

set_source_files_properties(file41108.cpp PROPERTIES COMPILE_FLAGS -Dfile41108)

set_source_files_properties(file41109.cpp PROPERTIES COMPILE_FLAGS -Dfile41109)
