cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir41110 SHARED ${SRC_FILES} )
set_source_files_properties(file41111.cpp PROPERTIES COMPILE_FLAGS -Dfile41111)

set_source_files_properties(file41112.cpp PROPERTIES COMPILE_FLAGS -Dfile41112)

set_source_files_properties(file41113.cpp PROPERTIES COMPILE_FLAGS -Dfile41113)

set_source_files_properties(file41114.cpp PROPERTIES COMPILE_FLAGS -Dfile41114)

set_source_files_properties(file41115.cpp PROPERTIES COMPILE_FLAGS -Dfile41115)

set_source_files_properties(file41116.cpp PROPERTIES COMPILE_FLAGS -Dfile41116)

set_source_files_properties(file41117.cpp PROPERTIES COMPILE_FLAGS -Dfile41117)

set_source_files_properties(file41118.cpp PROPERTIES COMPILE_FLAGS -Dfile41118)

set_source_files_properties(file41119.cpp PROPERTIES COMPILE_FLAGS -Dfile41119)

set_source_files_properties(file41120.cpp PROPERTIES COMPILE_FLAGS -Dfile41120)

set_source_files_properties(file41121.cpp PROPERTIES COMPILE_FLAGS -Dfile41121)

set_source_files_properties(file41122.cpp PROPERTIES COMPILE_FLAGS -Dfile41122)

set_source_files_properties(file41123.cpp PROPERTIES COMPILE_FLAGS -Dfile41123)

set_source_files_properties(file41124.cpp PROPERTIES COMPILE_FLAGS -Dfile41124)

set_source_files_properties(file41125.cpp PROPERTIES COMPILE_FLAGS -Dfile41125)

set_source_files_properties(file41126.cpp PROPERTIES COMPILE_FLAGS -Dfile41126)

set_source_files_properties(file41127.cpp PROPERTIES COMPILE_FLAGS -Dfile41127)

set_source_files_properties(file41128.cpp PROPERTIES COMPILE_FLAGS -Dfile41128)

set_source_files_properties(file41129.cpp PROPERTIES COMPILE_FLAGS -Dfile41129)

set_source_files_properties(file41130.cpp PROPERTIES COMPILE_FLAGS -Dfile41130)

set_source_files_properties(file41131.cpp PROPERTIES COMPILE_FLAGS -Dfile41131)

set_source_files_properties(file41132.cpp PROPERTIES COMPILE_FLAGS -Dfile41132)

set_source_files_properties(file41133.cpp PROPERTIES COMPILE_FLAGS -Dfile41133)

set_source_files_properties(file41134.cpp PROPERTIES COMPILE_FLAGS -Dfile41134)

set_source_files_properties(file41135.cpp PROPERTIES COMPILE_FLAGS -Dfile41135)

set_source_files_properties(file41136.cpp PROPERTIES COMPILE_FLAGS -Dfile41136)

set_source_files_properties(file41137.cpp PROPERTIES COMPILE_FLAGS -Dfile41137)

set_source_files_properties(file41138.cpp PROPERTIES COMPILE_FLAGS -Dfile41138)

set_source_files_properties(file41139.cpp PROPERTIES COMPILE_FLAGS -Dfile41139)

set_source_files_properties(file41140.cpp PROPERTIES COMPILE_FLAGS -Dfile41140)

set_source_files_properties(file41141.cpp PROPERTIES COMPILE_FLAGS -Dfile41141)

set_source_files_properties(file41142.cpp PROPERTIES COMPILE_FLAGS -Dfile41142)

set_source_files_properties(file41143.cpp PROPERTIES COMPILE_FLAGS -Dfile41143)

set_source_files_properties(file41144.cpp PROPERTIES COMPILE_FLAGS -Dfile41144)

set_source_files_properties(file41145.cpp PROPERTIES COMPILE_FLAGS -Dfile41145)

set_source_files_properties(file41146.cpp PROPERTIES COMPILE_FLAGS -Dfile41146)

set_source_files_properties(file41147.cpp PROPERTIES COMPILE_FLAGS -Dfile41147)

set_source_files_properties(file41148.cpp PROPERTIES COMPILE_FLAGS -Dfile41148)

set_source_files_properties(file41149.cpp PROPERTIES COMPILE_FLAGS -Dfile41149)

set_source_files_properties(file41150.cpp PROPERTIES COMPILE_FLAGS -Dfile41150)

set_source_files_properties(file41151.cpp PROPERTIES COMPILE_FLAGS -Dfile41151)

set_source_files_properties(file41152.cpp PROPERTIES COMPILE_FLAGS -Dfile41152)

set_source_files_properties(file41153.cpp PROPERTIES COMPILE_FLAGS -Dfile41153)

set_source_files_properties(file41154.cpp PROPERTIES COMPILE_FLAGS -Dfile41154)

set_source_files_properties(file41155.cpp PROPERTIES COMPILE_FLAGS -Dfile41155)

set_source_files_properties(file41156.cpp PROPERTIES COMPILE_FLAGS -Dfile41156)

set_source_files_properties(file41157.cpp PROPERTIES COMPILE_FLAGS -Dfile41157)
