cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir521 SHARED ${SRC_FILES} )
add_subdirectory(dir522)
add_subdirectory(dir3871)
set_source_files_properties(file7921.cpp PROPERTIES COMPILE_FLAGS -Dfile7921)

set_source_files_properties(file7922.cpp PROPERTIES COMPILE_FLAGS -Dfile7922)

set_source_files_properties(file7923.cpp PROPERTIES COMPILE_FLAGS -Dfile7923)

set_source_files_properties(file7924.cpp PROPERTIES COMPILE_FLAGS -Dfile7924)

set_source_files_properties(file7925.cpp PROPERTIES COMPILE_FLAGS -Dfile7925)

set_source_files_properties(file7926.cpp PROPERTIES COMPILE_FLAGS -Dfile7926)

set_source_files_properties(file7927.cpp PROPERTIES COMPILE_FLAGS -Dfile7927)

set_source_files_properties(file7928.cpp PROPERTIES COMPILE_FLAGS -Dfile7928)

set_source_files_properties(file7929.cpp PROPERTIES COMPILE_FLAGS -Dfile7929)

set_source_files_properties(file7930.cpp PROPERTIES COMPILE_FLAGS -Dfile7930)

set_source_files_properties(file7931.cpp PROPERTIES COMPILE_FLAGS -Dfile7931)

set_source_files_properties(file7932.cpp PROPERTIES COMPILE_FLAGS -Dfile7932)

set_source_files_properties(file7933.cpp PROPERTIES COMPILE_FLAGS -Dfile7933)

set_source_files_properties(file7934.cpp PROPERTIES COMPILE_FLAGS -Dfile7934)

set_source_files_properties(file7935.cpp PROPERTIES COMPILE_FLAGS -Dfile7935)

set_source_files_properties(file7936.cpp PROPERTIES COMPILE_FLAGS -Dfile7936)

set_source_files_properties(file7937.cpp PROPERTIES COMPILE_FLAGS -Dfile7937)

set_source_files_properties(file7938.cpp PROPERTIES COMPILE_FLAGS -Dfile7938)

set_source_files_properties(file7939.cpp PROPERTIES COMPILE_FLAGS -Dfile7939)

set_source_files_properties(file7940.cpp PROPERTIES COMPILE_FLAGS -Dfile7940)
