cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir7941 SHARED ${SRC_FILES} )
add_subdirectory(dir7942)
add_subdirectory(dir22339)
add_subdirectory(dir22441)
add_subdirectory(dir29315)
add_subdirectory(dir34989)
add_subdirectory(dir35041)
set_source_files_properties(file35078.cpp PROPERTIES COMPILE_FLAGS -Dfile35078)

set_source_files_properties(file35079.cpp PROPERTIES COMPILE_FLAGS -Dfile35079)

set_source_files_properties(file35080.cpp PROPERTIES COMPILE_FLAGS -Dfile35080)

set_source_files_properties(file35081.cpp PROPERTIES COMPILE_FLAGS -Dfile35081)

set_source_files_properties(file35082.cpp PROPERTIES COMPILE_FLAGS -Dfile35082)

set_source_files_properties(file35083.cpp PROPERTIES COMPILE_FLAGS -Dfile35083)

set_source_files_properties(file35084.cpp PROPERTIES COMPILE_FLAGS -Dfile35084)

set_source_files_properties(file35085.cpp PROPERTIES COMPILE_FLAGS -Dfile35085)

set_source_files_properties(file35086.cpp PROPERTIES COMPILE_FLAGS -Dfile35086)

set_source_files_properties(file35087.cpp PROPERTIES COMPILE_FLAGS -Dfile35087)

set_source_files_properties(file35088.cpp PROPERTIES COMPILE_FLAGS -Dfile35088)

set_source_files_properties(file35089.cpp PROPERTIES COMPILE_FLAGS -Dfile35089)

set_source_files_properties(file35090.cpp PROPERTIES COMPILE_FLAGS -Dfile35090)

set_source_files_properties(file35091.cpp PROPERTIES COMPILE_FLAGS -Dfile35091)

set_source_files_properties(file35092.cpp PROPERTIES COMPILE_FLAGS -Dfile35092)

set_source_files_properties(file35093.cpp PROPERTIES COMPILE_FLAGS -Dfile35093)

set_source_files_properties(file35094.cpp PROPERTIES COMPILE_FLAGS -Dfile35094)

set_source_files_properties(file35095.cpp PROPERTIES COMPILE_FLAGS -Dfile35095)

set_source_files_properties(file35096.cpp PROPERTIES COMPILE_FLAGS -Dfile35096)

set_source_files_properties(file35097.cpp PROPERTIES COMPILE_FLAGS -Dfile35097)

set_source_files_properties(file35098.cpp PROPERTIES COMPILE_FLAGS -Dfile35098)

set_source_files_properties(file35099.cpp PROPERTIES COMPILE_FLAGS -Dfile35099)

set_source_files_properties(file35100.cpp PROPERTIES COMPILE_FLAGS -Dfile35100)

set_source_files_properties(file35101.cpp PROPERTIES COMPILE_FLAGS -Dfile35101)

set_source_files_properties(file35102.cpp PROPERTIES COMPILE_FLAGS -Dfile35102)

set_source_files_properties(file35103.cpp PROPERTIES COMPILE_FLAGS -Dfile35103)

set_source_files_properties(file35104.cpp PROPERTIES COMPILE_FLAGS -Dfile35104)

set_source_files_properties(file35105.cpp PROPERTIES COMPILE_FLAGS -Dfile35105)

set_source_files_properties(file35106.cpp PROPERTIES COMPILE_FLAGS -Dfile35106)

set_source_files_properties(file35107.cpp PROPERTIES COMPILE_FLAGS -Dfile35107)

set_source_files_properties(file35108.cpp PROPERTIES COMPILE_FLAGS -Dfile35108)

set_source_files_properties(file35109.cpp PROPERTIES COMPILE_FLAGS -Dfile35109)

set_source_files_properties(file35110.cpp PROPERTIES COMPILE_FLAGS -Dfile35110)

set_source_files_properties(file35111.cpp PROPERTIES COMPILE_FLAGS -Dfile35111)

set_source_files_properties(file35112.cpp PROPERTIES COMPILE_FLAGS -Dfile35112)

set_source_files_properties(file35113.cpp PROPERTIES COMPILE_FLAGS -Dfile35113)

set_source_files_properties(file35114.cpp PROPERTIES COMPILE_FLAGS -Dfile35114)

set_source_files_properties(file35115.cpp PROPERTIES COMPILE_FLAGS -Dfile35115)

set_source_files_properties(file35116.cpp PROPERTIES COMPILE_FLAGS -Dfile35116)

set_source_files_properties(file35117.cpp PROPERTIES COMPILE_FLAGS -Dfile35117)

set_source_files_properties(file35118.cpp PROPERTIES COMPILE_FLAGS -Dfile35118)

set_source_files_properties(file35119.cpp PROPERTIES COMPILE_FLAGS -Dfile35119)

set_source_files_properties(file35120.cpp PROPERTIES COMPILE_FLAGS -Dfile35120)

set_source_files_properties(file35121.cpp PROPERTIES COMPILE_FLAGS -Dfile35121)

set_source_files_properties(file35122.cpp PROPERTIES COMPILE_FLAGS -Dfile35122)

set_source_files_properties(file35123.cpp PROPERTIES COMPILE_FLAGS -Dfile35123)

set_source_files_properties(file35124.cpp PROPERTIES COMPILE_FLAGS -Dfile35124)

set_source_files_properties(file35125.cpp PROPERTIES COMPILE_FLAGS -Dfile35125)

set_source_files_properties(file35126.cpp PROPERTIES COMPILE_FLAGS -Dfile35126)

set_source_files_properties(file35127.cpp PROPERTIES COMPILE_FLAGS -Dfile35127)

set_source_files_properties(file35128.cpp PROPERTIES COMPILE_FLAGS -Dfile35128)

set_source_files_properties(file35129.cpp PROPERTIES COMPILE_FLAGS -Dfile35129)

set_source_files_properties(file35130.cpp PROPERTIES COMPILE_FLAGS -Dfile35130)

set_source_files_properties(file35131.cpp PROPERTIES COMPILE_FLAGS -Dfile35131)

set_source_files_properties(file35132.cpp PROPERTIES COMPILE_FLAGS -Dfile35132)

set_source_files_properties(file35133.cpp PROPERTIES COMPILE_FLAGS -Dfile35133)

set_source_files_properties(file35134.cpp PROPERTIES COMPILE_FLAGS -Dfile35134)

set_source_files_properties(file35135.cpp PROPERTIES COMPILE_FLAGS -Dfile35135)

set_source_files_properties(file35136.cpp PROPERTIES COMPILE_FLAGS -Dfile35136)

set_source_files_properties(file35137.cpp PROPERTIES COMPILE_FLAGS -Dfile35137)

set_source_files_properties(file35138.cpp PROPERTIES COMPILE_FLAGS -Dfile35138)

set_source_files_properties(file35139.cpp PROPERTIES COMPILE_FLAGS -Dfile35139)

set_source_files_properties(file35140.cpp PROPERTIES COMPILE_FLAGS -Dfile35140)

set_source_files_properties(file35141.cpp PROPERTIES COMPILE_FLAGS -Dfile35141)

set_source_files_properties(file35142.cpp PROPERTIES COMPILE_FLAGS -Dfile35142)

set_source_files_properties(file35143.cpp PROPERTIES COMPILE_FLAGS -Dfile35143)

set_source_files_properties(file35144.cpp PROPERTIES COMPILE_FLAGS -Dfile35144)

set_source_files_properties(file35145.cpp PROPERTIES COMPILE_FLAGS -Dfile35145)

set_source_files_properties(file35146.cpp PROPERTIES COMPILE_FLAGS -Dfile35146)

set_source_files_properties(file35147.cpp PROPERTIES COMPILE_FLAGS -Dfile35147)

set_source_files_properties(file35148.cpp PROPERTIES COMPILE_FLAGS -Dfile35148)

set_source_files_properties(file35149.cpp PROPERTIES COMPILE_FLAGS -Dfile35149)

set_source_files_properties(file35150.cpp PROPERTIES COMPILE_FLAGS -Dfile35150)

set_source_files_properties(file35151.cpp PROPERTIES COMPILE_FLAGS -Dfile35151)

set_source_files_properties(file35152.cpp PROPERTIES COMPILE_FLAGS -Dfile35152)

set_source_files_properties(file35153.cpp PROPERTIES COMPILE_FLAGS -Dfile35153)

set_source_files_properties(file35154.cpp PROPERTIES COMPILE_FLAGS -Dfile35154)

set_source_files_properties(file35155.cpp PROPERTIES COMPILE_FLAGS -Dfile35155)

set_source_files_properties(file35156.cpp PROPERTIES COMPILE_FLAGS -Dfile35156)

set_source_files_properties(file35157.cpp PROPERTIES COMPILE_FLAGS -Dfile35157)

set_source_files_properties(file35158.cpp PROPERTIES COMPILE_FLAGS -Dfile35158)

set_source_files_properties(file35159.cpp PROPERTIES COMPILE_FLAGS -Dfile35159)

set_source_files_properties(file35160.cpp PROPERTIES COMPILE_FLAGS -Dfile35160)

set_source_files_properties(file35161.cpp PROPERTIES COMPILE_FLAGS -Dfile35161)

set_source_files_properties(file35162.cpp PROPERTIES COMPILE_FLAGS -Dfile35162)

set_source_files_properties(file35163.cpp PROPERTIES COMPILE_FLAGS -Dfile35163)

set_source_files_properties(file35164.cpp PROPERTIES COMPILE_FLAGS -Dfile35164)

set_source_files_properties(file35165.cpp PROPERTIES COMPILE_FLAGS -Dfile35165)

set_source_files_properties(file35166.cpp PROPERTIES COMPILE_FLAGS -Dfile35166)

set_source_files_properties(file35167.cpp PROPERTIES COMPILE_FLAGS -Dfile35167)

set_source_files_properties(file35168.cpp PROPERTIES COMPILE_FLAGS -Dfile35168)

set_source_files_properties(file35169.cpp PROPERTIES COMPILE_FLAGS -Dfile35169)

set_source_files_properties(file35170.cpp PROPERTIES COMPILE_FLAGS -Dfile35170)

set_source_files_properties(file35171.cpp PROPERTIES COMPILE_FLAGS -Dfile35171)

set_source_files_properties(file35172.cpp PROPERTIES COMPILE_FLAGS -Dfile35172)

set_source_files_properties(file35173.cpp PROPERTIES COMPILE_FLAGS -Dfile35173)

set_source_files_properties(file35174.cpp PROPERTIES COMPILE_FLAGS -Dfile35174)

set_source_files_properties(file35175.cpp PROPERTIES COMPILE_FLAGS -Dfile35175)

set_source_files_properties(file35176.cpp PROPERTIES COMPILE_FLAGS -Dfile35176)

set_source_files_properties(file35177.cpp PROPERTIES COMPILE_FLAGS -Dfile35177)

set_source_files_properties(file35178.cpp PROPERTIES COMPILE_FLAGS -Dfile35178)

set_source_files_properties(file35179.cpp PROPERTIES COMPILE_FLAGS -Dfile35179)

set_source_files_properties(file35180.cpp PROPERTIES COMPILE_FLAGS -Dfile35180)

set_source_files_properties(file35181.cpp PROPERTIES COMPILE_FLAGS -Dfile35181)

set_source_files_properties(file35182.cpp PROPERTIES COMPILE_FLAGS -Dfile35182)

set_source_files_properties(file35183.cpp PROPERTIES COMPILE_FLAGS -Dfile35183)

set_source_files_properties(file35184.cpp PROPERTIES COMPILE_FLAGS -Dfile35184)

set_source_files_properties(file35185.cpp PROPERTIES COMPILE_FLAGS -Dfile35185)

set_source_files_properties(file35186.cpp PROPERTIES COMPILE_FLAGS -Dfile35186)

set_source_files_properties(file35187.cpp PROPERTIES COMPILE_FLAGS -Dfile35187)

set_source_files_properties(file35188.cpp PROPERTIES COMPILE_FLAGS -Dfile35188)

set_source_files_properties(file35189.cpp PROPERTIES COMPILE_FLAGS -Dfile35189)

set_source_files_properties(file35190.cpp PROPERTIES COMPILE_FLAGS -Dfile35190)

set_source_files_properties(file35191.cpp PROPERTIES COMPILE_FLAGS -Dfile35191)

set_source_files_properties(file35192.cpp PROPERTIES COMPILE_FLAGS -Dfile35192)

set_source_files_properties(file35193.cpp PROPERTIES COMPILE_FLAGS -Dfile35193)

set_source_files_properties(file35194.cpp PROPERTIES COMPILE_FLAGS -Dfile35194)

set_source_files_properties(file35195.cpp PROPERTIES COMPILE_FLAGS -Dfile35195)

set_source_files_properties(file35196.cpp PROPERTIES COMPILE_FLAGS -Dfile35196)

set_source_files_properties(file35197.cpp PROPERTIES COMPILE_FLAGS -Dfile35197)

set_source_files_properties(file35198.cpp PROPERTIES COMPILE_FLAGS -Dfile35198)

set_source_files_properties(file35199.cpp PROPERTIES COMPILE_FLAGS -Dfile35199)

set_source_files_properties(file35200.cpp PROPERTIES COMPILE_FLAGS -Dfile35200)
